poprawki do kodu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=cash-app
+jwt.secret=EJFVhfn25SxcIP8Tu0eFWiVF89041PZBQV5KcJCVgS0=
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cashdb
+spring.datasource.username=cisco
+spring.datasource.password=Niestety123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
